<resources>
    <string name="app_name">OfficeOurs</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
    <string name="button5">Button5</string>

    <string name="officeHourMonday">M</string>
    <string name="officeHourTuesday">Tu</string>
    <string name="officeHourWednesday">W</string>
    <string name="officeHourThursday">Th</string>
    <string name="officeHourFriday">F</string>
    <string name="officeHourSaturday">Sa</string>
    <string name="officeHourSunday">Su</string>

    <string name="Name">Name :</string>
    <string name="officehours">Office Hour :</string>
    <string name="email">Email :</string>
    <string name="phoneNumber">Phone Number :</string>
    <string name="officeNumber">Office Number :</string>
    <string name="description">Description :</string>
    <string name="listOfCoursesToAdd">List Of Courses To Add :</string>
    <string name="add_course_button">Add Course</string>
    <string name="picture">Picture: </string>
    <string name="saveButton">Save</string>
    <string name="cancelButton">Cancel</string>

    <string name="create_professor_button">Create Professor</string>
    <string name="map_button">View Map</string>
    <string name="prof_image">Professor Image</string>
    <string name="first_floor_button">1F</string>
    <string name="second_floor_button">2F</string>
    <string name="third_floor_button">3F</string>
    <string name="fourth_floor_button">4F</string>

    <string name="courses_header"><u>COURSES</u></string>

    <string name="course_name_label">Course Name:</string>
    <string name="course_name_hint">e.g. CMSC436-0101</string>
    <string name="TA_image_label">Take an image of the TA office hours: </string>

    <string name="professor_login">Professor Login</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="loginButton">Log In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>