<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="20sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_weight="0.75">

        <TextView
            android:id="@+id/professor_log_in_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/professor_login"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#FFFFFF"
            android:paddingBottom="50sp"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/username_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/passWord"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/btn_login_bg"
                android:layout_marginRight="1dip"
                android:layout_weight="1"
                android:text="@string/loginButton"
                android:textColor="@color/btn_login" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="1dp"
                android:layout_weight="1.04"
                android:layout_marginTop="20dip"
                android:background="@color/btn_login_bg"
                android:text="@string/cancelButton"
                android:textColor="@color/btn_login" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>