<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_story"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="edu.umd.cs.agileandroid.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/professorNameID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="John Haha" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/officehours"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_Monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" M" />

            <RadioButton
                android:id="@+id/radio_Tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="T" />

            <RadioButton
                android:id="@+id/radio_Wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="W" />

            <RadioButton
                android:id="@+id/radio_Thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Th" />

            <RadioButton
                android:id="@+id/radio_Friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="F" />

            <RadioButton
                android:id="@+id/radio_Saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sat" />

            <RadioButton
                android:id="@+id/radio_Sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sun" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/professorEmailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name@haha.com" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/officenumber"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/professorOfficeNumberID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="######" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/picture"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/professorPhotoID" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cameraID"
                android:background="@android:drawable/ic_menu_camera" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/professorDescriptionID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Description........" />

        <Button
            android:id="@+id/AddCourseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addCoursesButton" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listOfCoursesToAdd"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ListOfCoursesToAddView" />

        <Spinner
            android:id="@+id/ProfessorSpinnerID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/save_story_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveButton" />

            <Button
                android:id="@+id/cancel_story_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelButton" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>