<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_map"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_button"
            android:text="Home"
            />

        <!--<DigitalClock-->
            <!--android:id="@+id/digital_clock"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight = "true"-->
            <!--android:layout_weight="1"-->
            <!--android:textAlignment="viewEnd"-->
            <!--android:layout_gravity="end"/>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="302dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/map_layout"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@id/MAP_ID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/first_floor"
            android:layout_weight="0.01"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.04"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first_floor_button"
            android:text="@string/first_floor_button"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/second_floor_button"
            android:layout_weight="1"
            android:text="@string/second_floor_button" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/third_floor_button"
            android:layout_weight="1"
            android:text="@string/third_floor_button" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fourth_floor_button"
            android:layout_weight="1"
            android:text="@string/fourth_floor_button" />
    </LinearLayout>
</LinearLayout>
